--- a/netflix-eureka-service-register-discovery-server-sample/.gitignore
+++ b/netflix-eureka-service-register-discovery-server-sample/.gitignore
@@ -1,9 +1,10 @@
-HELP.md
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-
+mvnw
+mvnw.cmd
 ### STS ###
 .apt_generated
 .classpath
