--- a/netflix-eureka-discovery-client-provider-sample/pom.xml
+++ b/netflix-eureka-discovery-client-provider-sample/pom.xml
@@ -29,6 +29,12 @@
     </properties>
 
     <dependencies>
+        <!--使用lombok注解省略Getter和Setter 以及ToString()方法,让项目看起来更清爽简洁-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!--spring-boot-starter-web提供Web模块支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
