--- a/netflix-eureka-sample/netflix-eureka-discovery-client-consumer-feign-sample/pom.xml
+++ b/netflix-eureka-sample/netflix-eureka-discovery-client-consumer-feign-sample/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--spring-cloud-starter-netflix-eureka-client 提供Netflix Eureka 客户端服务发现和注册功能模块支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
