--- a/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
+++ b/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
@@ -10,6 +10,7 @@ logging.level.sql=DEBUG
 logging.level.web=INFO
 logging.level.org.springframework=INFO
 logging.level.com.xingyun.singlearchitecturespringbootshoppingsample=DEBUG
+logging.file.name=/opt/logs/spring-cloud-demo/spring-app.log
 
 # config spring data jpa
 # enable or disable show data view in web console
@@ -34,19 +35,16 @@ spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.h
 # org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name,split with ,
 # com.xingyun.singlearchitecturespringbootshoppingsample.customize.UpperTableColumnStrategy:nikeName mapping to NIKE_NAME,split with , and convert to toUpperCase
 spring.jpa.hibernate.naming.physical-strategy=com.xingyun.singlearchitecturespringbootshoppingsample.customize.UpperTableColumnStrategy
-spring.jpa.database=h2
+spring.jpa.database=mysql
 
-# config h2 data source
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:in_memory_test_db;DB_CLOSE_DELAY=-1
-#spring.datasource.url=jdbc:h2:~/embedded_file_test_db
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.initialization-mode=embedded
-
-# config h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# config mySQL data source
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud_mysql8_test_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath*:data.sql
 
 # config actuator
 # show health monitor detail
