--- a/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
+++ b/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
@@ -10,7 +10,6 @@ logging.level.sql=DEBUG
 logging.level.web=INFO
 logging.level.org.springframework=INFO
 logging.level.com.xingyun.singlearchitecturespringbootshoppingsample=DEBUG
-logging.file.name=/opt/logs/spring-cloud-demo/spring-app.log
 
 # config spring data jpa
 # enable or disable show data view in web console
@@ -21,9 +20,9 @@ spring.jpa.show-sql=true
 # create-drop:Create and then destroy the schema at the end of the session.
 # update:Update the schema if necessary.
 # none:Disable DDL handling
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 # 可选参数如下:
-# org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to NIKE_NAME
+# org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to nike_name
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl extends ImplicitNamingStrategyJpaCompliantImpl
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl extends ImplicitNamingStrategyJpaCompliantImpl
@@ -31,10 +30,9 @@ spring.jpa.hibernate.ddl-auto=none
 # 隐式命名策略,当没有使用@Table和@Column注解时，implicit-strategy配置项才会被使用
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 # 物理命名策略，用于转换“逻辑名称”(隐式或显式)的表或列成一个物理名称。
-# org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl:nikeName mapping to nikeName,save the origin name
-# org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name,split with ,
-# com.xingyun.singlearchitecturespringbootshoppingsample.customize.UpperTableColumnStrategy:nikeName mapping to NIKE_NAME,split with , and convert to toUpperCase
-spring.jpa.hibernate.naming.physical-strategy=com.xingyun.singlearchitecturespringbootshoppingsample.customize.UpperTableColumnStrategy
+# org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl:nikeName mapping to nikeName
+# org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.database=mysql
 
 # config mySQL data source
@@ -42,9 +40,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud_mysql8_test_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=toor
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:schema.sql
-spring.datasource.data=classpath*:data.sql
+spring.datasource.initialization-mode=never
 
 # config actuator
 # show health monitor detail
