--- a/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
+++ b/single-architecture-spring-boot-shopping-sample/src/main/resources/application-test.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 # create-drop:Create and then destroy the schema at the end of the session.
 # update:Update the schema if necessary.
 # none:Disable DDL handling
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # 可选参数如下:
 # org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to nike_name
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
