--- a/microservice-spring-cloud-shopping-sample/netflix-eureka-service-register-center/src/main/resources/bootstrap-dev.properties
+++ b/microservice-spring-cloud-shopping-sample/netflix-eureka-service-register-center/src/main/resources/bootstrap-dev.properties
@@ -3,7 +3,7 @@ spring.application.name=netflix-eureka-service-register-center
 
 # config server information
 server.address=127.0.0.1
-# Eureka 服务器启动的端口,default is 8080
+# Eureka 服务器启动的端口,default is 8080,eureka default server port is 8761
 server.port=8761
 server.servlet.context-path=/netflix-eureka-service-register-center
 
