--- a/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap-prod.properties
+++ b/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap-prod.properties
@@ -36,8 +36,8 @@ spring.jpa.show-sql=true
 # create:Create the schema and destroy previous data
 # create-drop:Create and then destroy the schema at the end of the session.
 # update:Update the schema if necessary.
-# none:Disable DDL handling
-spring.jpa.hibernate.ddl-auto=create
+# none:Disable DDL handling 不通过
+spring.jpa.hibernate.ddl-auto=none
 # 可选参数如下:
 # org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to NIKE_NAME
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
@@ -50,16 +50,13 @@ spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.h
 # org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl:nikeName mapping to nikeName,save the origin name
 # org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name,split with ,
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-spring.jpa.database=h2
+spring.jpa.database=mysql
 
-# config h2 data source
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:in_memory_shopping_db;DB_CLOSE_DELAY=-1
-#spring.datasource.url=jdbc:h2:~/embedded_file_test_db
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.initialization-mode=never
-
-# config h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# config mySQL data source
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud_mysql8_test_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath*:data.sql
