--- a/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap-test.properties
+++ b/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap-test.properties
@@ -26,7 +26,7 @@ logging.level.root=INFO
 logging.level.sql=DEBUG
 logging.level.web=INFO
 logging.level.org.springframework=INFO
-logging.level.com.xingyun.singlearchitecturespringbootshoppingsample=DEBUG
+logging.level.com.xingyun.customerservice=DEBUG
 
 # config spring data jpa
 # enable or disable show data view in web console
@@ -37,9 +37,9 @@ spring.jpa.show-sql=true
 # create-drop:Create and then destroy the schema at the end of the session.
 # update:Update the schema if necessary.
 # none:Disable DDL handling
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # 可选参数如下:
-# org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to NIKE_NAME
+# org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy:nickName mapping to nike_name
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl extends ImplicitNamingStrategyJpaCompliantImpl
 # org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl extends ImplicitNamingStrategyJpaCompliantImpl
@@ -47,19 +47,14 @@ spring.jpa.hibernate.ddl-auto=create
 # 隐式命名策略,当没有使用@Table和@Column注解时，implicit-strategy配置项才会被使用
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 # 物理命名策略，用于转换“逻辑名称”(隐式或显式)的表或列成一个物理名称。
-# org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl:nikeName mapping to nikeName,save the origin name
-# org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name,split with ,
+# org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl:nikeName mapping to nikeName
+# org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy:nikeName mapping to nike_name
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-spring.jpa.database=h2
+spring.jpa.database=mysql
 
-# config h2 data source
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:in_memory_shopping_db;DB_CLOSE_DELAY=-1
-#spring.datasource.url=jdbc:h2:~/embedded_file_test_db
-spring.datasource.username=sa
-spring.datasource.password=sa
+# config mySQL data source
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_cloud_mysql8_test_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=toor
 spring.datasource.initialization-mode=never
-
-# config h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
