--- a/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap-dev.properties
+++ b/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap-dev.properties
@@ -1,8 +1,6 @@
 # config service name
 spring.application.name=product-comment-service
 
-# config service address
-server.address=127.0.0.1
 # config service port
 server.port=2103
 # config service context
@@ -16,3 +14,6 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
 # config eureka service register center address
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
+
+# Spring Boot Actuator
+management.endpoint.shutdown.enabled=true
