--- a/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap.properties
@@ -1,1 +1,24 @@
 spring.profiles.active=dev
+
+# config service name
+spring.application.name=customer-service
+
+# config service address
+#server.address=127.0.0.1
+# config service port
+server.port=2101
+# config service context
+server.servlet.context-path=/customer-service
+
+# eureka config
+eureka.instance.prefer-ip-address=true
+# service need to register on eureka service register center
+eureka.client.register-with-eureka=true
+# service need to cache some service list which have been register on eureka service register center
+eureka.client.fetch-registry=true
+# config eureka service register center address
+eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
+
+# Spring Boot Actuator
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.show-details=always
