--- a/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
@@ -1,1 +1,21 @@
 spring.profiles.active=dev
+
+# config service name
+spring.application.name=product-comment-service
+
+# config service port
+server.port=2103
+# config service context
+server.servlet.context-path=/product-comment-service
+
+# eureka config
+eureka.instance.prefer-ip-address=false
+# service need to register on eureka service register center
+eureka.client.register-with-eureka=true
+# service need to cache some service list which have been register on eureka service register center
+eureka.client.fetch-registry=false
+# config eureka service register center address
+eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
+
+# Spring Boot Actuator
+management.endpoint.shutdown.enabled=true
