--- a/microservice-spring-cloud-shopping-sample/netflix-eureka-service-register-center/src/main/resources/bootstrap-dev.properties
+++ b/microservice-spring-cloud-shopping-sample/netflix-eureka-service-register-center/src/main/resources/bootstrap-dev.properties
@@ -13,8 +13,8 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 # default is 0
 eureka.server.wait-time-in-ms-when-sync-empty=5
-
+eureka.instance.hostname=${server.address}
 #eureka.server.enableSelfPreservation=false
-
-
+# eureka server address
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/${server.servlet.context-path}/eureka
 
