--- a/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/bootstrap.properties
@@ -4,21 +4,47 @@ spring.profiles.active=dev
 spring.application.name=customer-service
 
 # config service address
-#server.address=127.0.0.1
+server.address=127.0.0.1
 # config service port
 server.port=2101
 # config service context
 server.servlet.context-path=/customer-service
 
+# required
 # eureka config
+# default is true,to disable the Eureka Discovery Client, you can set eureka.client.enabled to false
+#eureka.client.enabled=true
+# default is true 是否允许其他微服务发现该微服务
+#spring.cloud.discovery.enabled=true
+# default value is false
 eureka.instance.prefer-ip-address=true
 # service need to register on eureka service register center
 eureka.client.register-with-eureka=true
 # service need to cache some service list which have been register on eureka service register center
 eureka.client.fetch-registry=true
 # config eureka service register center address
+# default url http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
 
-# Spring Boot Actuator
+#optional
+# default lable is ${eureka.hostname}:${spring.application.name}:${server.port} such as 192.168.1.72:customer-service:2101
+# eureka.instance.instance-id= ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+# default use local ip address such as 192.168.1.72,we had better don't set it
+eureka.hostname=${server.address}
+# 健康检查
+# http://192.168.1.72:2101/customer-service/actuator/info 映射这个地址
+eureka.instance.status-page-url-path=/actuator/info
+# http://192.168.1.72:2101/customer-service/actuator/health 映射这个地址
+eureka.instance.health-check-url-path=/actuator/health
+# 手动检测访问查看应用是否正常运行
+eureka.instance.status-page-url=http://${eureka.hostname}:${server.port}${server.servlet.context-path}${eureka.instance.status-page-url-path}
+# 页面检测应用是否正常运行
+eureka.instance.health-check-url=http://${eureka.hostname}:${server.port}${server.servlet.context-path}${eureka.instance.health-check-url-path}
+#eureka.instance.home-page-url=http://${eureka.hostname}/:${server.port}${server.servlet.context-path}
+# 如果设置必须设置到application.properties,否则可能会出现一些意想不到的问题
+#eureka.client.health-check.enabled=true
+
+# config Spring Boot Actuator
 management.endpoint.shutdown.enabled=true
-management.endpoint.health.show-details=always
+# always|when_authorized|
+management.endpoint.health.show-details=when_authorized
