--- a/microservice-spring-cloud-shopping-sample/product-comment-service/pom.xml
+++ b/microservice-spring-cloud-shopping-sample/product-comment-service/pom.xml
@@ -71,6 +71,21 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <!-- By default, EurekaClient uses Jersey for HTTP communication,if you don't want to use it,please added these code as below -->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>com.sun.jersey</groupId>-->
+<!--                    <artifactId>jersey-client</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>com.sun.jersey</groupId>-->
+<!--                    <artifactId>jersey-core</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>com.sun.jersey.contribs</groupId>-->
+<!--                    <artifactId>jersey-apache-client4</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
 
     </dependencies>
