--- a/microservice-spring-cloud-shopping-sample/product-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/product-service/src/main/resources/bootstrap.properties
@@ -4,16 +4,18 @@ spring.profiles.active=dev
 spring.application.name=product-service
 
 # config service port
+server.address=127.0.0.1
 server.port=2102
 # config service context
 server.servlet.context-path=/product-service
 
+eureka.hostname=${server.address}
 # eureka config
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 # service need to register on eureka service register center
 eureka.client.register-with-eureka=true
 # service need to cache some service list which have been register on eureka service register center
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 # config eureka service register center address
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
 
