--- a/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
@@ -4,18 +4,36 @@ spring.profiles.active=dev
 spring.application.name=product-comment-service
 
 # config service port
+server.address=127.0.0.1
 server.port=2103
 # config service context
 server.servlet.context-path=/product-comment-service
 
 # eureka config
-eureka.instance.prefer-ip-address=false
+eureka.hostname=${server.address}
+eureka.instance.prefer-ip-address=true
 # service need to register on eureka service register center
 eureka.client.register-with-eureka=true
 # service need to cache some service list which have been register on eureka service register center
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 # config eureka service register center address
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
+
+# 成为实例还涉及到注册表的定期心跳（通过客户端的serviceUrl），默认持续时间为30秒
+# 直到实例，服务器和客户端在其本地缓存中都具有相同的元数据后，客户端才能发现该服务（因此可能需要3个心跳)
+# 三次心跳,每次10秒,需要30秒,default value is 30
+eureka.instance.leaseRenewalIntervalInSeconds=30
+
+# Eureka 支持高可用,即当一个服务注册中心挂的时候其他服务注册中心还可以继续提供服务
+eureka.instance.metadataMap.zone = zone1
+eureka.client.preferSameZoneEureka = true
+#eureka.instance.metadataMap.zone = zone2
+#eureka.client.preferSameZoneEureka = true
+
+# default is true auto refresh
+eureka.client.refresh.enable=true
+# 如果为true 它可以使用服务器主机名中的域名作为区域的代理。
+spring.cloud.loadbalancer.eureka.approximateZoneFromHostname=true
 
 # Spring Boot Actuator
 management.endpoint.shutdown.enabled=true
