--- a/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
+++ b/microservice-spring-cloud-shopping-sample/product-comment-service/src/main/resources/bootstrap.properties
@@ -7,33 +7,63 @@ spring.application.name=product-comment-service
 server.address=127.0.0.1
 server.port=2103
 # config service context
-server.servlet.context-path=/product-comment-service
+server.servlet.context-path=/${spring.application.name}
 
-# eureka config
-eureka.hostname=${server.address}
+# common eureka config
+# 在某些情况下，Eureka最好公布服务的IP地址而不是主机名。 将eureka.instance.preferIpAddress设置为true，并且当应用程序向eureka注册时，它将使用其IP地址而不是其主机名。
+# default value is false
 eureka.instance.prefer-ip-address=true
-# service need to register on eureka service register center
+# config eureka ip address
+eureka.instance.ip-address=${server.address}
+# config eureka port for http
+eureka.instance.non-secure-port=${server.port}
+# config eureka switch for https
+#eureka.instance.secure-port-enabled=false
+# config eureka port for https
+#eureka.instance.secure-port=443
+eureka.instance.home-page-url-path=${server.servlet.context-path}
+eureka.instance.home-page-url=http://${eureka.instance.ip-address}:${eureka.instance.non-secure-port}/${eureka.instance.home-page-url-path}
+# 健康检查
+# http://192.168.1.72:2101/customer-service/actuator/info 映射这个地址
+eureka.instance.status-page-url-path=actuator/health
+# http://192.168.1.72:2101/customer-service/actuator/health 映射这个地址
+eureka.instance.health-check-url-path=actuator/health
+# 手动检测访问查看应用是否正常运行
+eureka.instance.status-page-url=${eureka.instance.home-page-url}/${eureka.instance.status-page-url-path}
+# 页面检测应用是否正常运行
+eureka.instance.health-check-url=${eureka.instance.home-page-url}/${eureka.instance.health-check-url-path}
+# 如果超过90秒还没有续期,就从列表剔除掉它,default 90
+eureka.instance.lease-expiration-duration-in-seconds=90
+# 每间隔30秒续期一次 生产环境最好使用默认值30
+eureka.instance.lease-renewal-interval-in-seconds=30
+# default instance label is ${eureka.hostname}:${spring.application.name}:${server.port} such as 192.168.1.72:customer-service:2101
+# eureka.instance.instance-id= ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+#eureka.instance.metadata-map.zone=zone1
+
+# Standalone Mode
+# 默认情况下Eureka 是否服务端也是客户端,如果不是Eureka 服务器集群模式需要关闭自身的注册功能
+# 是否将该服务注册到服务治理服务器上,因为当前是服务注册服务器,且不构建任何服务器集群,因此讲起设置为false 表示不将自己注册到Netflix Eureka 服务注册中心上
 eureka.client.register-with-eureka=true
-# service need to cache some service list which have been register on eureka service register center
+# 设置成false 表示启动后不将服务注册中心已注册的服务注册列表更新到本地
 eureka.client.fetch-registry=true
-# config eureka service register center address
-eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
-
-# 成为实例还涉及到注册表的定期心跳（通过客户端的serviceUrl），默认持续时间为30秒
-# 直到实例，服务器和客户端在其本地缓存中都具有相同的元数据后，客户端才能发现该服务（因此可能需要3个心跳)
-# 三次心跳,每次10秒,需要30秒,default value is 30
-eureka.instance.leaseRenewalIntervalInSeconds=30
-
-# Eureka 支持高可用,即当一个服务注册中心挂的时候其他服务注册中心还可以继续提供服务
-eureka.instance.metadataMap.zone = zone1
-eureka.client.preferSameZoneEureka = true
-#eureka.instance.metadataMap.zone = zone2
+# eureka service url default zone http://localhost:8761/eureka/
+# other service will use the default zone http://127.0.0.1:8761/netflix-eureka-service-register-center/eureka
+eureka.client.service-url.defaultZone=http://127.0.0.1:8761/netflix-eureka-service-register-center-01-server/eureka,http://127.0.0.1:8761/netflix-eureka-service-register-center-02-server/eureka
+# default is true,to disable the Eureka Discovery Client, you can set eureka.client.enabled to false
+eureka.client.enabled=true
+# 禁用刷新Eureka客户端的功能,避免配置文件修改引起其他微服务调用失败
+eureka.client.refresh.enable=true
+# 如果设置必须设置到application.properties,否则可能会出现一些意想不到的问题
+#eureka.client.health-check.enabled=true
+# peer to peer
 #eureka.client.preferSameZoneEureka = true
 
-# default is true auto refresh
-eureka.client.refresh.enable=true
-# 如果为true 它可以使用服务器主机名中的域名作为区域的代理。
-spring.cloud.loadbalancer.eureka.approximateZoneFromHostname=true
+# if you don't want to use ribbon,please set the value to false
+#spring.cloud.loadbalancer.ribbon.enabled=false
+# default is true 如果使用spring cloud discovery you can set it
+# spring.cloud.discovery.enabled=true
 
-# Spring Boot Actuator
+# config Spring Boot Actuator
 management.endpoint.shutdown.enabled=true
+# always|when_authorized|
+management.endpoint.health.show-details=when_authorized
