--- a/microservice-spring-cloud-shopping-sample/customer-service/.gitignore
+++ b/microservice-spring-cloud-shopping-sample/customer-service/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
@@ -29,3 +28,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Mac OSX ###
+.DS_Store
