added spring cloud netflix zuul api gateway code

--- a/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/bootstrap-dev.yml
+++ b/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/bootstrap-dev.yml
@@ -17,10 +17,11 @@ server:
 
 ribbon:
   eureka:
-    enabled: true
+    enabled: false
 
 zuul:
   routes:
     # the name is service name
     book-service:
       url: http://127.0.0.1:2104/book-service/
+
